# zkx402

./: .dockerignore  .gitignore  .gitmodules  AGENT_ENHANCEMENTS_SUMMARY.md  AGENT_INTEGRATION_GUIDE.md  API_REFERENCE.md  DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PUSH_TO_GITHUB.sh  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  RENDER_QUICK_SETUP.md  RENDER_SETUP_GUIDE.md  SUMMARY.md  UI_WALLET_UPDATE_TEST_RESULTS.md  USE_CASES_OVERVIEW.md  WALLET_INFO.md  X402_BAZAAR_INTEGRATION.md  X402_DEEP_INTEGRATION.md  X402_INTEGRATION_OPPORTUNITIES.md  render.yaml  start.sh
zkx402-agent-auth/archived/zkengine-prover/: Cargo.toml
zkx402-agent-auth/archived/zkengine-prover/examples/: complex_auth.rs
zkx402-agent-auth/archived/zkengine-prover/wasm/: authorization.wat
zkx402-agent-auth/jolt-atlas-fork/: BUGS_FIXED.md  Cargo.toml  JOLT_ATLAS_ENHANCEMENTS.md  JOLT_ATLAS_TEST_RESULTS.md  LICENSE  README.md  VERIFICATION_LIMITATION.md  ZKX402_MODIFICATIONS.md  rustfmt.toml
zkx402-agent-auth/jolt-atlas-fork/.github/workflows/: rust.yml
zkx402-agent-auth/jolt-atlas-fork/demo-models/: comparison_demo.onnx  create_demo_models.py  matmult_1d_demo.onnx  neural_auth.onnx
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/: Cargo.toml
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/models/addsubmuladd/: gen.py  network.onnx
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/models/multiclass0/: gen.py  labels.json  meta.json  network.onnx  test.py  vocab.json
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/models/sentiment_select/: gen.py  network.onnx  test.py
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/models/sigmoid/: gen.py  network.onnx
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/models/softmax/: gen.py  network.onnx
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/src/: builder.rs  constants.rs  lib.rs  logger.rs  parallel_utils.rs  trace_types.rs
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/src/graph/: input.rs  mod.rs  model.rs  node.rs  tracer.rs  utilities.rs
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/src/ops/: hybrid.rs  lookup.rs  mod.rs  poly.rs  utils.rs
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/src/tensor/: mod.rs  ops.rs
zkx402-agent-auth/jolt-atlas-fork/onnx-tracer/tests/: matmul_power_of_two_integration.rs  non_power_of_two_matmult_rebase_test.rs  non_power_of_two_matmult_test.rs
zkx402-agent-auth/jolt-atlas-fork/src/: lib.rs
zkx402-agent-auth/jolt-atlas-fork/tests/: ONNX_MATMUL_TRANSPOSE_TESTS.md  onnx_matmul_transpose_test.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/: Cargo.toml
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/examples/: proof_json_output.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/: lib.rs  main.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/benches/: bench.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/jolt/: bytecode.rs  mod.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/jolt/execution_trace/: mod.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/jolt/instruction/: add.rs  argmax.rs  beq.rs  broadcast.rs  div.rs  ge.rs  le.rs  mod.rs  mul.rs  output.rs  rebase_scale.rs  reduce_max.rs  relu.rs  sigmoid.rs  softmax.rs  sub.rs  test.rs  virtual_advice.rs  virtual_assert_valid_div0.rs  virtual_assert_valid_signed_remainder.rs  virtual_const.rs  virtual_move.rs  virtual_pow2.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/jolt/precompiles/: matmult.rs  mod.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/jolt/r1cs/: builder.rs  constraints.rs  spartan.rs  spartan_interleaved_poly.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/jolt/tensor_heap/: mod.rs  output_check.rs  program_io_polynomial.rs  raf_evaluation.rs  read_write_check.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/program/: mod.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/subprotocols/: sparse_dense_shout.rs  twist.rs
zkx402-agent-auth/jolt-atlas-fork/zkml-jolt-core/src/utils/: mod.rs
zkx402-agent-auth/jolt-napi/: Cargo.toml  package-lock.json  package.json
zkx402-agent-auth/jolt-napi/src/: lib.rs
zkx402-agent-auth/jolt-prover/: Cargo.toml  README.md
zkx402-agent-auth/jolt-prover/.cargo/: config.toml
zkx402-agent-auth/jolt-prover/.cargo-home/: .global-cache
zkx402-agent-auth/jolt-prover/.cargo-home/git/db/arkworks-algebra-55219ebe4db9d51c/: FETCH_HEAD
zkx402-agent-auth/jolt-prover/.cargo-home/git/db/sxt-dory-ebc7f7f27b088cd2/: FETCH_HEAD
zkx402-agent-auth/jolt-prover/.cargo-home/git/db/tract-3c391e7e500bc645/: FETCH_HEAD
zkx402-agent-auth/jolt-prover/.cargo-home/git/db/zkml-jolt-b6d0cd3ade2057e9/: FETCH_HEAD
zkx402-agent-auth/jolt-prover/.cargo-home/registry/cache/index.crates.io-1949cf8c6b5b557f/: alloy-primitives-0.7.7.crate  alloy-rlp-0.3.12.crate  alloy-sol-macro-0.7.7.crate  alloy-sol-macro-expander-0.7.7.crate  alloy-sol-macro-input-0.7.7.crate  alloy-sol-types-0.7.7.crate  ark-bn254-0.5.0.crate  ark-ff-0.3.0.crate  ark-ff-asm-0.3.0.crate  ark-ff-macros-0.3.0.crate  ark-serialize-0.3.0.crate  ark-serialize-derive-0.5.0.crate  ark-std-0.3.0.crate  ark-std-0.5.0.crate  cc-1.2.43.crate  clap-4.5.50.crate  clap_builder-4.5.50.crate  educe-0.6.0.crate  fastrlp-0.3.1.crate  fastrlp-0.4.0.crate  keccak-asm-0.1.4.crate  kstring-2.0.2.crate  liquid-0.26.11.crate  liquid-core-0.26.11.crate  liquid-derive-0.26.10.crate  liquid-lib-0.26.11.crate  papergrid-0.9.1.crate  pest-2.8.3.crate  pest_derive-2.8.3.crate  pest_generator-2.8.3.crate  pest_meta-2.8.3.crate  ruint-1.17.0.crate  ruint-macro-1.2.1.crate  rustls-0.23.34.crate  scan_fmt-0.2.6.crate  (+9 more)
zkx402-agent-auth/jolt-prover/examples/: business_hours_auth.rs  integer_auth_e2e.rs  proof_json_output.rs  rule_based_auth.rs  simple_test.rs  simple_velocity_e2e.rs  velocity_auth.rs  whitelist_auth.rs
zkx402-agent-auth/jolt-prover/guest/: Cargo.toml
zkx402-agent-auth/jolt-prover/guest/src/: lib.rs
zkx402-agent-auth/jolt-prover/src/: lib.rs  main.rs
zkx402-agent-auth/jolt-prover/tests/: integration_test.rs
(+297 files in other folders)
