[package]
name = "jolt-prover"
version = "0.1.0"
edition = "2021"
authors = ["ZKx402 Contributors"]
description = "JOLT Atlas prover for ZKx402 agent authorization"

[dependencies]
# JOLT Atlas dependencies (from local fork with MAX_TENSOR_SIZE=1024)
zkml-jolt-core = { path = "../jolt-atlas-fork/zkml-jolt-core" }
onnx-tracer = { path = "../jolt-atlas-fork/onnx-tracer" }

# Cryptography
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"

# Error handling
eyre = "0.6"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "jolt_prover"
path = "src/lib.rs"

[[example]]
name = "simple_test"
path = "examples/simple_test.rs"

[[example]]
name = "rule_based_auth"
path = "examples/rule_based_auth.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1

# Use the same patches as jolt-atlas-fork for arkworks
[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
