[package]
name = "zkx402-jolt-auth"
version = "0.1.0"
edition = "2021"

[[example]]
name = "velocity_auth"
path = "examples/velocity_auth.rs"

[[example]]
name = "whitelist_auth"
path = "examples/whitelist_auth.rs"

[[example]]
name = "business_hours_auth"
path = "examples/business_hours_auth.rs"

[[example]]
name = "simple_velocity_e2e"
path = "examples/simple_velocity_e2e.rs"

[dependencies]
# JOLT Atlas for ONNX inference proving (FORKED with MAX_TENSOR_SIZE=1024)
zkml-jolt-core = { path = "../jolt-atlas-fork/zkml-jolt-core" }
onnx-tracer = { path = "../jolt-atlas-fork/onnx-tracer" }

# Use our fixed jolt-core with MSM API compatibility
# Need rayon feature for parallel operations
jolt-core = { path = "../zkml-jolt-fork/jolt-core", default-features = false, features = ["rayon"] }

# Cryptographic backend (pin to the same fork/branch as jolt-optimizations to avoid duplicates)
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[patch.crates-io]
# Match the fork's workspace patches to ensure a single arkworks tree
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }

[patch."https://github.com/spaceandtimefdn/sxt-dory"]
# Use our fixed dory fork with consistent arkworks versions
dory = { path = "../dory-fork" }
