[package]
name = "zkx402-zkengine-auth"
version = "0.1.0"
edition = "2021"

[[example]]
name = "complex_auth"
path = "examples/complex_auth.rs"

[dependencies]
# zkEngine dependencies (same as parent zkEngine_dev)
zk-engine = { path = "../../zkEngine_dev" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
