[package]
name = "zkml-jolt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use a16z fork to match jolt-core and dory
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false, features = [
  "derive",
] }
ark-serialize-derive = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-std = "0.5.0"  # Not in a16z fork, use crates.io

itertools = "0.10.0"
onnx-tracer = { path = "../onnx-tracer" }
# Use our fixed jolt-core from local fork (MSM API compatibility)
jolt-core = { path = "../../zkml-jolt-fork/jolt-core" }
rayon = { version = "^1.8.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1.41", features = [
  "attributes",
], default-features = false }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.8"
thiserror = "1.0.58"
sha3 = "0.10.8"
rand_core = { version = "0.6.4", default-features = false }
serial_test = "3.2.0"
clap = { version = "4.3.10", features = ["derive"] }

[dev-dependencies]
log = "0.4"
regex = "1.10.6"

[lib]
name = "zkml_jolt_core"
path = "src/lib.rs"
