[package]
name = "zkml-jolt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
itertools = "0.10.0"
onnx-tracer = { path = "../onnx-tracer" }
jolt-core = { git = "https://github.com/ICME-Lab/zkml-jolt", package = "jolt-core", branch = "zkml-jolt" }
rayon = { version = "^1.8.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = { version = "0.1.41", features = [
  "attributes",
], default-features = false }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.8"
thiserror = "1.0.58"
sha3 = "0.10.8"
ark-serialize = { version = "0.5.0", default-features = false, features = [
  "derive",
] }
ark-serialize-derive = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0" }
rand_core = { version = "0.6.4", default-features = false }
serial_test = "3.2.0"
clap = { version = "4.3.10", features = ["derive"] }

[dev-dependencies]
log = "0.4"
regex = "1.10.6"

[lib]
name = "zkml_jolt_core"
path = "src/lib.rs"

[[example]]
name = "proof_json_output"
path = "examples/proof_json_output.rs"
